--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head></head>
 <body>
 <h1>principal</h1>
-<h2>ssecundario</h2>
+<h2>ssecundarioeto</h2>
 
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit rem odio, dolor earum rerum beatae mollitia error tempore aperiam commodi delectus nam, corporis in aut magni unde repellendus porro? Illo.</p>
 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, deleniti ducimus qui provident culpa facilis, facere quibusdam asperiores expedita ullam modi temporibus maiores omnis in, earum laboriosam amet ab optio.</p>    
